fixed navbar covering alerts

--- a/BlueTeamStore/website/static/styles.css
+++ b/BlueTeamStore/website/static/styles.css
@@ -1,3 +1,7 @@
+body { 
+    padding-top: 50px; 
+}
+
 .accordion .card {
     background: none;
     border: none;
